*ceph-0.80.8 (03 Mar 2015)
*ceph-0.93 (03 Mar 2015)

  03 Mar 2015; Michael Weber <xmw@gentoo.org> +ceph-0.80.8.ebuild,
  +ceph-0.93.ebuild, ceph-0.87.1.ebuild, metadata.xml:
  Add 0.93 and 0.80.8.

  02 Mar 2015; Michael Weber <xmw@gentoo.org> +files/README.gentoo,
  +files/ceph-0.87.1-stdint.patch, +files/ceph.confd-r1, +files/ceph.initd-r1,
  +files/ceph.logrotate, ceph-0.87.1.ebuild, metadata.xml:
  Drop USE=rocksdb and USE=kinetic for now.

*ceph-0.87.1 (02 Mar 2015)

  02 Mar 2015; Michael Weber <xmw@gentoo.org> +ceph-0.87.1.ebuild,
  -ceph-0.87.ebuild, -files/ceph-fix-gnustack.patch, metadata.xml:
  Version bump with new use flags

*ceph-0.87 (02 Mar 2015)

  02 Mar 2015; Michael Weber <xmw@gentoo.org> +ceph-0.87.ebuild,
  +files/ceph-0.79-libzfs.patch, +files/ceph-fix-gnustack.patch, +metadata.xml:
  Version bump (bug 536472)