@@ -1,13 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST ceph-0.80.8.tar.bz2 4042112 SHA256 f0dbeada16333c50cd7f56f51eac87e7ba8cd22c42edccbd40576a23f813f725 SHA512 cb002a81a99462a05ef4db4bb5a8e09ec19b84c8041cab88c36e46d77fe512e57e1636f1aaa5aeb9fe03c4449816961cf9f82a183603fae99213e06dd519be6f WHIRLPOOL b6ee10a22e27ad7262ca0fc75ed1625a1f31218040411e723ef6872e5c13a5e0495eb179d8ff606305e8c04dafb4233cf5562e285427cd15200aac9d5ee8801f
-DIST ceph-0.87.1.tar.bz2 5834385 SHA256 a9a68ed58571af20fbbd7be4227dc71f5176eeb0713707ba3d8fddc00972b007 SHA512 d032f257506049cadd583c8c8b516667bc5a271060641d307cfd22b923e8038ff506ad06f38d84ce01dfdc877498322033cd08310927e60665d03b05119aeb1a WHIRLPOOL 0408a0d9aa5c78808568b09e505375d2ebd32e1ae307e1292c1389fc5e70a9a769ed9c54abebce96cb21b4e5cd828674268c8de6cecae72e20934b6d7ec5e8f1
 DIST ceph-0.93.tar.bz2 7008770 SHA256 36174c47f52b0db1f0ee081a72040349052b07f477f2d97a2f5a2bf1727c0fe4 SHA512 3587deb4c38717d933f91ac4219317f0f36b71f08a0cb9698b2452a8427d7ace2b4a82a0883728d4c4990ccab1dd60cb911c4e1f380cb6241a1228ba89c7dfa3 WHIRLPOOL 5df04619f949674fad921c06dc401cbbfbcc5deb126c0f0b36f5e70a55dc4c7cb6384622c57327e4346c081f8648935d6b08840cb87cb3ac453731459f7ea60f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlT1bY4ACgkQknrdDGLu8JAevAD+OE2Cox1f6adqYVdm4UoZHc6v
-9M6tjUZ95v8eNPozE1sA/119vb+MLwEtYxiCrdCAQAESV0FGow98LPrWDOJ5cDGq
-=fZ3h
+iF4EAREIAAYFAlT3Fy4ACgkQknrdDGLu8JBkGQD5AVBGzzfVMQaXL2f8tgLskrM0
+v9GxP7vo3KEjSfsJ9iwA/i3UgkxGQmkhtm4B/omMnvMXO4Hox/OaaQGkuqBzSjNK
+=Tt1f
 -----END PGP SIGNATURE-----
